<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Project5</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="options_menu">Options</string>
    <string name="jabs_welcome">Welcome to JABS</string>
    <string name="option_select">Select an Option</string>
    <string name="readme">README</string>
    <string name="submit">Submit</string>
    <string name="create_a_new_appointment_book">Create a new Appointment Book</string>
    <string name="appointment_book_owner">Appointment Book Owner</string>
    <string name="button">Button</string>
    <string name="title_activity_search">search_activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="am">AM</string>
    <string name="owner_name">Owner Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="hh_mm">hh:mm</string>
</resources>