<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".create_appointment_book_activity">

    <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:layout_marginTop="88dp"
            app:layout_constraintTop_toBottomOf="@+id/AppointmentBookOwner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            android:onClick="CreateNewAppointmentBook" />

    <TextView
            android:text="@string/create_a_new_appointment_book"
            android:layout_width="343dp"
            android:layout_height="46dp"
            android:id="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:textStyle="bold" />

    <TextView
            android:text="@string/appointment_book_owner"
            android:layout_width="219dp"
            android:layout_height="19dp"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" />

    <EditText
            android:layout_width="357dp"
            android:layout_height="61dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/AppointmentBookOwner"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="Owner Name" />
</androidx.constraintlayout.widget.ConstraintLayout>